# Research-Project-Template-for-SLURM-Clusters

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  batch_submit.py  load-env.sh  pyproject.toml  submit.py
configs/: hello_world.yaml
src/: __init__.py  hello_world.py
src/utils/: __init__.py  config_utils.py  logging_utils.py  metadata_utils.py
